--- a/manifest.json
+++ b/manifest.json
@@ -1,20 +1,20 @@
 {
   "name": "Slide Memorizer",
   "short_name": "Slides",
-  "start_url": "/Slide-memorizer/learn.html",
-  "scope": "/Slide-memorizer/",
+  "start_url": "./learn.html",
+  "scope": "/",
   "display": "standalone",
   "background_color": "#ffffff",
   "theme_color": "#2563eb",
   "description": "Offline-capable slide memorizer",
   "icons": [
     {
-      "src": "/Slide-memorizer/images/slider-192.png",
+      "src": "./images/slider-192.png",
       "sizes": "192x192",
       "type": "image/png"
     },
     {
-      "src": "/Slide-memorizer/images/slider-512.png",
+      "src": "./images/slider-512.png",
       "sizes": "512x512",
       "type": "image/png"
     }
